# ChangeLog for app-editors/conglomerate
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/conglomerate/Attic/ChangeLog,v 1.19 2010/05/31 21:13:48 eva Exp $

  31 May 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -conglomerate-0.7.11.ebuild, -conglomerate-0.7.12.ebuild:
  Clean up old revisions.

  11 Oct 2007; Rémi Cardona <remi@gentoo.org> conglomerate-0.7.11.ebuild,
  conglomerate-0.7.12.ebuild, conglomerate-0.9.0.ebuild,
  conglomerate-0.9.1.ebuild:
  update gtksourceview deps (see bug #195366)

  17 Feb 2007; Alexander H. Færøy <eroyf@gentoo.org> metadata.xml:
  Removed allanonjl from metadata.xml

  08 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  11 Nov 2005; Michael Hanselmann <hansmi@gentoo.org>
  conglomerate-0.9.0.ebuild:
  Stable on ppc.

*conglomerate-0.9.1 (06 Nov 2005)

  06 Nov 2005; Mike Gardiner <obz@gentoo.org> conglomerate-0.9.0.ebuild,
  +conglomerate-0.9.1.ebuild:
  Added a new version 0.9.1, as requested in bug #99153. Also, marked 0.9.0
  stable on x86.

  07 Apr 2005; John N. Laliberte <allanonjl@gentoo.org>
  conglomerate-0.9.0.ebuild:
  Updated RDEPEND and added debug and spell to IUSE.

*conglomerate-0.9.0 (19 Mar 2005)

  19 Mar 2005; John N. Laliberte <allanonjl@gentoo.org> metadata.xml,
  +conglomerate-0.9.0.ebuild:
  version bump to fill bug #68587

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  conglomerate-0.7.11.ebuild, conglomerate-0.7.6.ebuild:
  Masked conglomerate-0.7.6.ebuild stable for ppc

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  conglomerate-0.7.11.ebuild:
  Masked conglomerate-0.7.11.ebuild stable for ppc

  13 Apr 2004; Danny van Dyk <kugelfang@gentoo.org> conglomerate-0.7.12.ebuild:
  marked ~amd64

  06 Mar 2004; Alastair Tse <liquidx@gentoo.org> conglomerate-0.7.11.ebuild,
  conglomerate-0.7.12.ebuild:
  added scrollkeeper deps

*conglomerate-0.7.12 (18 Feb 2004)