@@ -1,6 +1,10 @@
 # ChangeLog for app-editors/conglomerate
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/conglomerate/Attic/ChangeLog,v 1.19 2010/05/31 21:13:48 eva Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-editors/conglomerate/Attic/ChangeLog,v 1.20 2011/03/07 00:03:17 nirbheek Exp $
+
+  06 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
+  conglomerate-0.9.0.ebuild, conglomerate-0.9.1.ebuild:
+  Fix slot-deps on gtk+ and other libs
 
   31 May 2010; Gilles Dartiguelongue <eva@gentoo.org>
   -conglomerate-0.7.11.ebuild, -conglomerate-0.7.12.ebuild:
